[package]
name = "makesksa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
#bb = { git = "https://github.com/Jhynjhiruu/bbrs.git" }
bb = { path = "../bbrs" }
anyhow = "1.0.81"
thiserror = "1.0.58"
soft-aes = "0.2.2"
hex = "0.4.3"
flate2 = "1.0.28"
clap-num = "1.1.1"
